// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`123 should turn into an object 1`] = `
Object {
  "crypto": Object {
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 123,
  },
  "currency": Object {
    "symbol": "DѦ",
    "ticker": "DARK",
  },
  "explorer": "https://dexplorer.ark.io/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "configuration": true,
      "delegate": true,
      "delegates": true,
      "fees": true,
      "syncing": true,
      "transaction": true,
      "transactions": true,
      "voters": true,
      "votes": true,
      "wallet": true,
      "wallets": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Fee": Object {
      "all": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": false,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "multiSignature": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Internal": Object {
      "fastDelegateSync": true,
    },
    "Ledger": Object {
      "getPublicKey": true,
      "getVersion": true,
      "signMessage": true,
      "signTransaction": true,
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "customPeer": true,
      "dynamicFees": true,
      "memo": true,
    },
    "Peer": Object {
      "search": true,
    },
    "Transaction": Object {
      "delegateRegistration": true,
      "delegateResignation": true,
      "htlcClaim": true,
      "htlcLock": true,
      "htlcRefund": true,
      "ipfs": true,
      "multiPayment": true,
      "multiSignature": true,
      "secondSignature": true,
      "transfer": true,
      "vote": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 51,
      "enabled": true,
      "maximumPerTransaction": 1,
      "maximumPerWallet": 1,
    },
  },
  "id": "ark.devnet",
  "knownWallets": "https://raw.githubusercontent.com/ArkEcosystem/common/master/devnet/known-wallets-extended.json",
  "name": "ARK Devnet",
  "networking": Object {
    "hosts": Array [
      "https://dwallets.ark.io",
    ],
    "hostsMultiSignature": Array [
      "https://dmusig1.ark.io",
    ],
  },
  "transactionTypes": Array [
    "bridgechain-registration",
    "bridgechain-resignation",
    "bridgechain-update",
    "business-registration",
    "business-resignation",
    "business-update",
    "delegate-registration",
    "delegate-resignation",
    "entity-registration",
    "entity-resignation",
    "entity-update",
    "htlc-claim",
    "htlc-lock",
    "htlc-refund",
    "ipfs",
    "multi-payment",
    "multi-signature",
    "second-signature",
    "transfer",
    "vote",
  ],
  "type": "test",
}
`;

exports[`456 should turn into an object 1`] = `
Object {
  "crypto": Object {
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 456,
  },
  "currency": Object {
    "symbol": "DѦ",
    "ticker": "DARK",
  },
  "explorer": "https://dexplorer.ark.io/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "configuration": true,
      "delegate": true,
      "delegates": true,
      "fees": true,
      "syncing": true,
      "transaction": true,
      "transactions": true,
      "voters": true,
      "votes": true,
      "wallet": true,
      "wallets": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Fee": Object {
      "all": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": false,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "multiSignature": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Internal": Object {
      "fastDelegateSync": true,
    },
    "Ledger": Object {
      "getPublicKey": true,
      "getVersion": true,
      "signMessage": true,
      "signTransaction": true,
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "customPeer": true,
      "dynamicFees": true,
      "memo": true,
    },
    "Peer": Object {
      "search": true,
    },
    "Transaction": Object {
      "delegateRegistration": true,
      "delegateResignation": true,
      "htlcClaim": true,
      "htlcLock": true,
      "htlcRefund": true,
      "ipfs": true,
      "multiPayment": true,
      "multiSignature": true,
      "secondSignature": true,
      "transfer": true,
      "vote": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 51,
      "enabled": true,
      "maximumPerTransaction": 1,
      "maximumPerWallet": 1,
    },
  },
  "id": "ark.devnet",
  "knownWallets": "https://raw.githubusercontent.com/ArkEcosystem/common/master/devnet/known-wallets-extended.json",
  "name": "ARK Devnet",
  "networking": Object {
    "hosts": Array [
      "https://dwallets.ark.io",
    ],
    "hostsMultiSignature": Array [
      "https://dmusig1.ark.io",
    ],
  },
  "transactionTypes": Array [
    "bridgechain-registration",
    "bridgechain-resignation",
    "bridgechain-update",
    "business-registration",
    "business-resignation",
    "business-update",
    "delegate-registration",
    "delegate-resignation",
    "entity-registration",
    "entity-resignation",
    "entity-update",
    "htlc-claim",
    "htlc-lock",
    "htlc-refund",
    "ipfs",
    "multi-payment",
    "multi-signature",
    "second-signature",
    "transfer",
    "vote",
  ],
  "type": "test",
}
`;

exports[`789 should turn into an object 1`] = `
Object {
  "crypto": Object {
    "signingMethods": Object {
      "mnemonic": true,
      "wif": true,
    },
    "slip44": 789,
  },
  "currency": Object {
    "symbol": "DѦ",
    "ticker": "DARK",
  },
  "explorer": "https://dexplorer.ark.io/",
  "featureFlags": Object {
    "Client": Object {
      "broadcast": true,
      "configuration": true,
      "delegate": true,
      "delegates": true,
      "fees": true,
      "syncing": true,
      "transaction": true,
      "transactions": true,
      "voters": true,
      "votes": true,
      "wallet": true,
      "wallets": true,
    },
    "Derivation": Object {
      "bip39": true,
      "bip44": true,
    },
    "Fee": Object {
      "all": true,
    },
    "Identity": Object {
      "address": Object {
        "mnemonic": true,
        "multiSignature": true,
        "privateKey": true,
        "publicKey": true,
        "wif": true,
      },
      "keyPair": Object {
        "mnemonic": true,
        "privateKey": false,
        "wif": true,
      },
      "privateKey": Object {
        "mnemonic": true,
        "wif": true,
      },
      "publicKey": Object {
        "mnemonic": true,
        "multiSignature": true,
        "wif": true,
      },
      "wif": Object {
        "mnemonic": true,
      },
    },
    "Internal": Object {
      "fastDelegateSync": true,
    },
    "Ledger": Object {
      "getPublicKey": true,
      "getVersion": true,
      "signMessage": true,
      "signTransaction": true,
    },
    "Link": Object {
      "block": true,
      "transaction": true,
      "wallet": true,
    },
    "Message": Object {
      "sign": true,
      "verify": true,
    },
    "Miscellaneous": Object {
      "customPeer": true,
      "dynamicFees": true,
      "memo": true,
    },
    "Peer": Object {
      "search": true,
    },
    "Transaction": Object {
      "delegateRegistration": true,
      "delegateResignation": true,
      "htlcClaim": true,
      "htlcLock": true,
      "htlcRefund": true,
      "ipfs": true,
      "multiPayment": true,
      "multiSignature": true,
      "secondSignature": true,
      "transfer": true,
      "vote": true,
    },
  },
  "governance": Object {
    "voting": Object {
      "delegateCount": 51,
      "enabled": true,
      "maximumPerTransaction": 1,
      "maximumPerWallet": 1,
    },
  },
  "id": "ark.devnet",
  "knownWallets": "https://raw.githubusercontent.com/ArkEcosystem/common/master/devnet/known-wallets-extended.json",
  "name": "ARK Devnet",
  "networking": Object {
    "hosts": Array [
      "https://dwallets.ark.io",
    ],
    "hostsMultiSignature": Array [
      "https://dmusig1.ark.io",
    ],
  },
  "transactionTypes": Array [
    "bridgechain-registration",
    "bridgechain-resignation",
    "bridgechain-update",
    "business-registration",
    "business-resignation",
    "business-update",
    "delegate-registration",
    "delegate-resignation",
    "entity-registration",
    "entity-resignation",
    "entity-update",
    "htlc-claim",
    "htlc-lock",
    "htlc-refund",
    "ipfs",
    "multi-payment",
    "multi-signature",
    "second-signature",
    "transfer",
    "vote",
  ],
  "type": "test",
}
`;
